unpackaged/objects/BLND_DFTT_Entity_Info__c.object
<CustomObject>
	<fields>
		<fullName>BLND_Data__c</fullName>
		<label>Data</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Expansion__c</fullName>
		<label>Expansion</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Extra_Field__c</fullName>
		<label>Extra Field</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Flag1__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Flag1</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Flag2__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Flag2</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Flag3__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Flag3</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Type__c</fullName>
		<label>Type</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>RecentlyCreated</fullName>
				</value>
				<value>
					<fullName>RecentlyModified</fullName>
				</value>
				<value>
					<fullName>RecentlyViewed</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<label>TableTop Entity Info</label>
	<nameField>
		<label>Entity Info Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>TableTop Entity Infos</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>